css/styles.css
html, body {
  margin: 0;
  padding: 0;
  background: #F9FAFB;
  font-family: 'Source Sans Pro', sans-serif;
  overflow-x: hidden;
}

* { box-sizing: border-box; }

img {
  border-radius: 6px;
}

h1, h2, h3 {
  padding: 0;
  margin: 4px 0;
  color: #1F2937;
  max-width: max-content;
}

h1 {
  font-size: 2.2em;
  border: solid 2px #3B82F6;
  padding: 2px 4px;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1em;
}

a {
  text-decoration: none;
}

a:hover {
  color: #1D4ED8;
  text-decoration: underline;
}

a, p {
  color: #1F2937;
}

p {
  font-size: 1.2em;
  line-height: 1.5;
  margin: 0;
}

nav {
  display: flex;
  padding: 16px;
  justify-content: center;
  align-items: center;
  width: 90vw;
  max-width: 900px;
  margin: 0 auto;
  left: 0;
  right: 0;
  position: fixed;
  top: 16px;
  height: 64px;
  border-radius: 32px;
  z-index: 10;
  background: white;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

nav ul {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  padding: 0;
}

nav ul li {
  margin: 16px;
  font-size: 1.3em;
}

footer {
  width: 100vw;
  text-align: center;
  margin-top: 32px;
  padding: 8px;
}

footer p {
  font-size: .9em;
  color: #4B5563;
}

.container {
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 72px;
}

.home-card {
  display: flex;
  flex-direction: row;
  width: 100%;
  max-width: 1000px;
  min-height: 400px;
  justify-content: space-between;
  padding: 32px;
  margin-top: 64px;
  border-radius: 4px;
}

#giza-card {
  background: #FEE2E2;
}

#nyc-card {
  background: #DBEAFE;
}

#rochester-card {
  background: #EDE9FE;
}

#sf-card {
  background: #FEF3C7;
}

.home-card img {
  width: 40%;
}

.home-card p {
  padding: 8px 0;
  max-width: 70%;
  font-size: 1.3em;
}

.home-card--left {
  display: flex;
  flex-direction: column;
  padding: 8px;
}

